[Refactor]: Refactor Swagger config
