# docs/swagger.json
@@ -700,6 +700,43 @@
                 }
             }
         },
+        "/user": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete User Information By Id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Delete User By Id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id User",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/backend.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
         "/user-type/all": {
             "get": {
                 "security": [
@@ -992,7 +1029,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Delete User Information By Id",
+                "description": "Get User Information By Id",
                 "consumes": [
                     "application/json"
                 ],
@@ -1002,13 +1039,13 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Delete User By Id",
+                "summary": "Get User By Id",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Id User",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -1242,6 +1279,9 @@
                     "type": "string"
                 },
                 "position_id": {
+                    "type": "integer"
+                },
+                "role_id": {
                     "type": "integer"
                 },
                 "sur_name": {
